--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
    text-align: center;
    background-image: url(../public/rick.gif);
-   background-size: 300px;
+   background-size: 33%;
 }
