--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
-   text-align: center;
+   /* background-color: red; */
+   /* text-align: center;
    background-image: url(../public/rick.gif);
    background-size: 100%;
-   background-attachment: fixed;
+   background-position: center;
+   background-attachment:fixed */
 }
+
