--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -2,5 +2,7 @@
 border-color: aliceblue;
 border: 20%;
 display: flex;
-flex-direction:column-reverse;
+flex-direction:row-reverse;
+justify-content: center;
+align-items: center;
 }
