--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  background-image: url(../public/rick2.gif);
+  background-image: url(../public/rick.gif);
   
   background-size: 87%;
   background-position: top;
   background-attachment:fixed}
-  :hover{ background-image: url(../public/rick.gif);
+  /* :hover{ background-image: url(../public/rick.gif);
     background-size: auto;
 
-  }
+  } */
 
 
 code {
