--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  background-image: url(../public/rick.gif);
+  background-image: url(https://pixabay.com/es/videos/azul-cuadr%C3%ADcula-formas-cifras-9811/);
   
   background-size: 87%;
   background-position: top;
