--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
 *{
@@ -148,3 +148,4 @@ body{
     }
 
 }
+ */
