--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,8 +1,8 @@
 .lista{
 border-color: aliceblue;
 border: 20%;
-display: flex;
-flex-direction:row;
-justify-content:first baseline;
-
+display: grid;
+grid-template-columns: 25% 25% 25% 25%;
+grid-template-rows: 25% 25% 25% 25%;
+grid-row-start: 5;
 }
