--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body{
 
     background-image: url(./views/gif/imagen.jpeg);
-    background-repeat:unset ;
+    display: flex;
+    flex-direction: column;
+    
 
     
 }
