--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -5,4 +5,13 @@ display: grid;
 grid-template-columns: 25% 25% 25% 25%;
 grid-template-rows: 25% 25% 25% 25%;
 grid-row-start: 5;
+@media only screen and (max-width : 900px) {
+border-color: aliceblue;
+ border: 20%;
+ display: grid;
+ grid-template-columns: 100%; 
+ grid-template-rows: 100%;
+ grid-row-start: 5;
 }
+
+   }
