--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,5 +1,5 @@
 .lista{
-   background-image: url(C:\Users\igorm\OneDrive\Escritorio\rivk\rick\public\rick.gif); 
+   background-image: url(./rick/public/rick.gif); 
 background-repeat: no-repeat;
 background-position: center;
    border-color: aliceblue;
