--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,5 +1,7 @@
 body {
    background-image: url("https://wallpaperaccess.com/full/831751.png")
+      background-size: cover; 
+   background-attachment: fixed;
 }
 
 .lista{
