--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,5 +1,5 @@
 body {
-   background-image: url("https://wallpaperaccess.com/full/831751.png")
+   background-image: url("https://wallpaperaccess.com/full/831751.png");
       background-size: cover; 
    background-attachment: fixed;
 }
