--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,4 +1,4 @@
-.App {
+#app {
    background-image: url("https://wallpaperaccess.com/full/831751.png");
       background-size: cover; 
    background-attachment: fixed;
