--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,20 +1,23 @@
+
+
+
 .lista{
-   background-image: url(C:\Users\igorm\OneDrive\Escritorio\rivk\rick\public\rick.gif); 
-background-repeat: no-repeat;
-background-position: center;
-   border-color: aliceblue;
-border: 20%;
-display: grid;
+  
+
+   border-color: rgb(40, 141, 230);
+ display: grid;
 grid-template-columns: 25% 25% 25% 25%;
-grid-template-rows: 25% 25% 25% 25%;
-grid-row-start: 5;
+grid-template-rows: 33% 33% 33%;
+margin: 5%;
+padding: 5%;
+height: 22em;
 @media only screen and (max-width : 900px) {
 border-color: aliceblue;
  border: 20%;
  display: grid;
  grid-template-columns: 100%; 
  grid-template-rows: 100%;
- grid-row-start: 5;
+ 
 }
 
    }
