--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@ body{
     display: flex;
     flex-direction: column;
     
+      
+    background-repeat: no-repeat;
+    background-position: center;
 
-    
 }
