--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
 body{
 
-    background-color: #222222;
+    background-color: #010400;
+    background-image: url(./views/gif/henrickbg.jpg);
     display: flex;
+    background-size: contain;
     flex-direction: column;
     background-repeat: no-repeat;
     background-position: center;
-
+  background-attachment: fixed;
+  max-width: 1200px;
 }
+
