--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,10 +1,10 @@
 .lista{
-max-width: 1200px;  
+max-width: 900px;  
 display: grid;
 grid-template-columns:  25% 25% 25% 25%; 
-margin: 5%;
 padding: 5%;
 height: 22em;
+margin-left: 30%;
 
 @media only screen and (max-width : 600px) {
 border-color: aliceblue;
