--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -6,14 +6,16 @@ padding: 5%;
 height: 22em;
 margin-left: 15%;
 margin-right: 15%;
-margin-top: 15%;
+margin-top: 25%;
 
 @media only screen and (max-width : 600px) {
 border-color: aliceblue;
+margin-top: 40%;
  border: 20%;
  display: grid;
- grid-template-columns: 100%; 
- grid-template-rows: 100%;
+ grid-template-columns: 80%; 
+ grid-template-rows: 80%;
+ justify-content: center
  
 }
 }
