--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,11 @@ body{
     background-repeat: no-repeat;
     background-position: center;
   background-attachment: fixed;
+  @media only screen and (max-width : 900px) {
+    background-size: cover;
+    }
+  @media only screen and (max-width : 600px) {
+    background-size: cover;
+    }
 }
 
